# masterdata-checker

./: .gitignore  .gitlab-ci.yml  20231201_Rules_for_Checking_Masterdata.docx  README.md  content_checker.py  masterdata_checker.py  masterdata_content_checker.py  masterdata_entity_checker.py  masterdata_format_checker.py  masterdata_name_checker.py  masterdata_visualizer.py  masterdata_visualizer_csv.py  mkdocs.yml  pyproject.toml
.github/workflows/: actions.yml
django_checker/masterdata_checker/: db.sqlite3
django_checker/masterdata_checker/masterdata_checker/: settings.py  urls.py
django_checker/masterdata_checker/myapp/: utils.py  views.py
django_checker/masterdata_checker/myapp/static/css/: style.css
django_checker/masterdata_checker/myapp/templates/: homepage.html
docs/: index.md
jupyter_checker/: checker_jupyter.ipynb
jupyter_checker/.ipynb_checkpoints/: checker_jupyter-checkpoint.ipynb
jupyter_tutorial/: checker_jupyter.ipynb
masterdata_checker/: manage.py
masterdata_checker/app/: utils.py  views.py
masterdata_checker/app/static/css/: style.css
masterdata_checker/app/templates/: homepage.html  login.html
masterdata_checker/checker/: asgi.py  settings.ini.example  settings.py  urls.py  wsgi.py
src/masterdata_checker/: app.py  cli.py  content.py  csv_visualizer.py  entity.py  name.py  visualizer.py
tests/: test_content.py  test_name.py
tests/data/: example01_warningprefix.xlsx  example02_errorcodeprop.xlsx  object_type_CHEMICAL_v1_S.3_cmadaria.xlsx  object_type_CHEMICAL_v1_S.3_cmadaria_error_prop.xlsx  object_type_CHEMICAL_v1_S.3_cmadaria_error_prop_headers.xlsx
